# ipfsspec

./: .gitattributes  .gitignore  Dockerfile  Dockerfile.fsspec  LICENSE  MANIFEST.in  Makefile  README.md  demo-Copy1.ipynb  demo-dataset-model.ipynb  demo-huggingface.ipynb  demo-local-public.ipynb  demo.ipynb  docker-compose.yaml  pyproject.toml  pytest.ini  requirements-debug.txt  requirements.txt  requirments.txt  sandbox.py  setup.cfg  setup.py
.github/workflows/: connection_methods.yml  default_gateways.yml  local_gateway.yml  pythonpackage.yml  pythonpublish.yml
ipfsspec/: __init__.py  _version.py  asyn.py  async_ipfs.py  buffered_file.py  car.py  core.py  gateway.py  syn.py  tracing.py  unixfs_pb2.py  unixfsv1.py  utils.py
messages/: unixfs.proto
scripts/: startup_backend.sh 
test/: create_test_files.py  mockserver.py  test_async.py  test_async_fallback.py  test_gateway.py  test_ipfs.py  test_ipfs_async.py  test_merkle_verification.py  testdata.car
test/data/: yo.txt
test/data/model/input/: testmodel.pkl
test/data/output/: bruh.txt  yo.txt
